tests/baselines/reference/parserComputedPropertyName8.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName8.ts(2,11): error TS1166: Computed property names are not allowed in class property declarations.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName8.ts(2,12): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName8.ts (2 errors) ====
    class C {
       public [e]
              ~~~
!!! error TS1166: Computed property names are not allowed in class property declarations.
               ~
!!! error TS2304: Cannot find name 'e'.
    }